--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-masonry-css": "^1.0.16",
     "react-paginate": "^8.2.0",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
